<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SignUpActivity" >

    <!-- Login form -->

    <ScrollView
        android:id="@+id/signup_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            style="@style/LoginFormContainer"
            android:orientation="vertical"
            android:textColor="@color/sinch_purple">


            <EditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/sinch_purple"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
            
            <EditText
                android:id="@+id/password_again_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_retype"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:imeActionId="@+id/edittext_action_signup"
                android:imeActionLabel="@string/signup"
                android:imeOptions="actionUnspecified" />
            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:maxLength="30"
                    />
            <EditText
                android:id="@+id/phonenumber_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phonenumberprompt"
                android:inputType="phone"
                android:maxLines="1"
                android:textColor="@color/sinch_purple"
                android:singleLine="true" />

            <Button
                android:id="@+id/action_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/inputbox"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:textColor="@color/sinch_purple"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/signup" />
        </LinearLayout>
    </ScrollView>

</merge>